--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
         <div class="dsmeta-logo-container">
             <img src="logo.svg" alt="DSMeta">
             <h1>DSMeta</h1>
-            <p>Desenvolvido por
-                
-                <a href="https://www.instagram.com/_alex.richard/">@_alex.richard</a>
-                </p>
+            <p>Desenvolvido por Richard Alexandrino
+                <div class="dsmeta-logo-container-logo"> 
+                    <a href="https://github.com/RichardAlexandrino"><img src="github.svg" alt="Notificar"></a>
+                    <a href="https://www.instagram.com/_alex.richard/"><img src="instagram.svg" alt="Notificar"></a>
+                    <a href="https://www.linkedin.com/in/richard-alexandrino/"><img src="linkedin.svg" alt="Notificar"></a>
+                </div>
+            </p>
         </div>
     </header>
     <main>
